deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: was
  namespace: argocd
spec:
  selector:
    matchLabels:
      app: was
  replicas: 2
  template:
    metadata:
      labels:
        app: was
    spec:
      containers:
      - image: nginx:latest
        imagePullPolicy: Always
        name: was
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "100Mi"
            cpu: "250m"
          limits:
            memory: "200Mi"
            cpu: "5000m"
